rabbit/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  serviceName: "not-applicable"
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          # Official rabbitmq image - use management to include GUI
          image: rabbitmq:3-management
          ports:
            # Use http to access GUI
            - name: http
              protocol: TCP
              containerPort: 15672
            # Use amqp to send messages to queue
            - name: amqp
              protocol: TCP
              containerPort: 5672
          volumeMounts:
            # Persisted data stored at this path
            - mountPath: "/var/lib/rabbitmq"
              name: rabbitmq-volume
      volumes:
        - name: rabbitmq-volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
